--- a/arch/arm64/configs/rise-a5y17lte_defconfig
+++ b/arch/arm64/configs/rise-a5y17lte_defconfig
@@ -950,7 +950,7 @@ CONFIG_NET_SCH_FIFO=y
 # CONFIG_NETLINK_DIAG is not set
 # CONFIG_NET_MPLS_GSO is not set
 # CONFIG_HSR is not set
-CONFIG_KNOX_NCM=y
+# CONFIG_KNOX_NCM is not set
 CONFIG_RPS=y
 CONFIG_RFS_ACCEL=y
 CONFIG_XPS=y
@@ -1124,7 +1124,7 @@ CONFIG_BLK_DEV_RAM_SIZE=8192
 # CONFIG_ENCLOSURE_SERVICES is not set
 # CONFIG_APDS9802ALS is not set
 # CONFIG_ISL29003 is not set
-CONFIG_KNOX_KAP=y
+# CONFIG_KNOX_KAP is not set
 # CONFIG_ISL29020 is not set
 # CONFIG_SENSORS_TSL2550 is not set
 # CONFIG_SENSORS_BH1780 is not set
@@ -1143,7 +1143,7 @@ CONFIG_UID_SYS_STATS=y
 # CONFIG_UID_SYS_STATS_DEBUG is not set
 # CONFIG_MEMORY_STATE_TIME is not set
 CONFIG_EXYNOS_POWEROFF=y
-CONFIG_TIMA_LOG=y
+# CONFIG_TIMA_LOG is not set
 # CONFIG_C2PORT is not set
 
 #
@@ -1204,7 +1204,7 @@ CONFIG_LINK_DEVICE_SHMEM=y
 CONFIG_UMTS_MODEM_SS310AP=y
 # CONFIG_DEBUG_PKTLOG is not set
 # CONFIG_LINK_CONTROL_MSG_IOSM is not set
-CONFIG_CP_SECURE_BOOT=y
+# CONFIG_CP_SECURE_BOOT is not set
 
 #
 # Samsung Modem Interface Driver for Memory-type Interface
