--- a/arch/arm64/configs/exynos7880-a5y17lte_eur_defconfig
+++ b/arch/arm64/configs/exynos7880-a5y17lte_eur_defconfig
@@ -127,7 +127,7 @@ CONFIG_RESOURCE_COUNTERS=y
 # CONFIG_CGROUP_PERF is not set
 CONFIG_CGROUP_SCHED=y
 CONFIG_FAIR_GROUP_SCHED=y
-# CONFIG_CFS_BANDWIDTH is not set
+CONFIG_CFS_BANDWIDTH=y
 CONFIG_RT_GROUP_SCHED=y
 # CONFIG_BLK_CGROUP is not set
 # CONFIG_CHECKPOINT_RESTORE is not set
