--- a/drivers/net/wireless/qcacld-2.0/Kconfig
+++ b/drivers/net/wireless/qcacld-2.0/Kconfig
@@ -33,6 +33,10 @@ config QCOM_VOWIFI_11R
 	bool "Enable Fast Transition (11r) feature"
 	default n
 
+config WLAN_FEATURE_RX_WAKELOCK
+	bool "Enable RX wake lock feature"
+	default n
+
 config WLAN_FEATURE_NAN
 	bool "Enable NAN feature"
 	default n
